samples/_failures_safe/1761561944_041630_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f7569cba.c: In function ‘display_compression_info’:
./samples/SAFE/__tmp_f7569cba.c:163:5: error: expected expression at end of input
  163 |     if (ctx->output_size >
      |     ^~
./samples/SAFE/__tmp_f7569cba.c:163:5: error: expected declaration or statement at end of input
